# TickForge

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  rules.json
src/core/: Entity.cpp  Entity.hpp  Event.hpp  EventBus.hpp  Renderer.cpp  Renderer.hpp  TickClock.cpp  TickClock.hpp  World.cpp  World.hpp
src/render/: Renderer.cpp  Renderer.hpp
src/rules/: Rule.hpp  RuleLoader.cpp  RuleLoader.hpp  RuleSystem.cpp  RuleSystem.hpp
